<resources>
    <string name="app_name">baseLibrary</string>

    <string name="app_crash_cue">很抱歉，程序遭遇异常，即将退出！</string>
    <string name="idle">下拉有惊喜!!!</string>
    <string name="ready">松开刷新!!!</string>
    <string name="data_loading">正在加载&#8230;</string>
    <string name="loadProgress">%1$d%%\n正在加载&#8230;</string>

    <string name="upLoading">正在上传&#8230;</string>
    <string name="publish_loading">正在发表&#8230;</string>
    <string name="loading_modify">正在修改&#8230;</string>
    <string name="loading_save">正在保存&#8230;</string>
    <string name="loading_get">正在获取&#8230;</string>
    <string name="register_loading">正在注册&#8230;</string>
    <string name="user_login">正在登录&#8230;</string>
    <string name="exit_loading">正在退出&#8230;</string>
    <string name="loading_success">加载成功</string>
    <string name="inputContentNoNull">输入内容不能为空！！！</string>
    <string name="modify_success">修改成功</string>
    <string name="get_success">获取成功</string>
    <string name="phoenError">手机号码错误！</string>
    <string name="passError">密码错误！</string>
    <string name="login_success">登录成功</string>
    <string name="exit_app">再按一次退出程序！</string>
    <string name="numPass">账号密码不能为空!!!</string>

    <string name="successs">成功</string>
    <string name="error">错误</string>

    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>

    <string name="photograph">拍照</string>
    <string name="album_selection">相册选择</string>
    <string name="preview">预览</string>

    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="age">%1$s\n年龄</string>
    <string name="height">%1$s\n身高(cm)</string>
    <string name="weight">%1$s\n体重(kg)</string>

    <string name="userName">账号：</string>
    <string name="passWord">密码：</string>
    <string name="registerTitle">注册</string>
    <string name="confirmPass">确认密码：</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="login_exit">退出登录</string>
    <string name="myData">个人资料</string>
    <string name="imgHead">头像</string>
    <string name="sex">性别属性</string>
    <string name="nation">民族</string>
    <string name="agemodify">年龄</string>
    <string name="heightModify">身高(cm)</string>
    <string name="weightModify">体重(kg)</string>
    <string name="schoolNum">学籍号</string>
    <string name="birthday">出生日期</string>
    <string name="school">学校</string>
    <string name="parentPhone">本人电话</string>
    <string name="nav_00_title">Home</string>
    <string name="nav_01_title">News</string>
    <string name="nav_02_title">Pictures</string>
    <string name="nav_03_title">Star</string>
    <string name="rememberPass">记住密码</string>
    <string name="loginTitle">全 国 体 育 联 盟\nNational Sports Union</string>
    <string name="navigationTitle">&#160;&#160;&#160;&#160;&#160;Google Hot Air Balloon\nhttps://github.com/ggzaigl1</string>
    <string name="system_title">系统提示</string>
    <string name="system_content">您确定要退出登录吗?</string>
    <string name="login_username">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="tools">工具</string>
    <string name="phone_system">手机相关信息</string>
    <string name="about_us">关于我们</string>
    <string name="selector_button">SelectorButton</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="web_error">抱歉~\n加载失败,点击重新加载</string>

    <string name="dialog_title">提示</string>
    <string name="set">设置</string>
    <string name="defaule_first_message">为了您的安全，您需要授权该权限才可以正常使用相关功能哦。</string>
    <string name="defaule_always_message">当前应用缺少相应的权限，您需要设置相应的权限后才可正常相关功能。</string>

    <string name="fingerprint_recognition_start">开始指纹识别</string>
    <string name="fingerprint_recognition_cancel">取消指纹识别</string>
    <string name="fingerprint_recognition_guide_tip">点击“开始指纹识别”按钮</string>
    <string name="fingerprint_recognition_tip">请进行指纹识别，长按指纹解锁键</string>
    <string name="fingerprint_recognition_not_support">此设备不支持指纹解锁</string>
    <string name="fingerprint_recognition_success">指纹识别成功</string>
    <string name="fingerprint_recognition_failed">指纹识别失败，请重试！</string>
    <string name="fingerprint_recognition_error">指纹识别错误，等待几秒之后再重试</string>
    <string name="fingerprint_recognition_authenticating">指纹识别已经开启，长按指纹解锁键</string>
    <string name="fingerprint_recognition_unlock_screen">测试密码解锁屏幕</string>
    <string name="fingerprint_recognition_not_enrolled">您还没有录制指纹，请录入！</string>
    <string name="fingerprint_not_set_unlock_screen_pws">系统没有设置锁屏密码，请设置！</string>
    <string name="fingerprint_sys_setting_page">进入系统指纹设置页面</string>
    <string name="sys_pwd_recognition_success">系统密码识别成功</string>
    <string name="sys_pwd_recognition_failed">系统密码识别失败</string>

    <string name="check_info_message">未获得应用运行所需的基本权限，请在设置中开启权限后再使用</string>
    <string name="check_info_title">权限提示</string>
    <string name="check_info_setting">去设置</string>

    <string name="notLogin">Google Hot Air Balloon</string>
    <string name="exitLogin">退出登录</string>
    <string name="clickLogin">点击登录</string>
</resources>
